recursion.cons.remove.Remove.scala.error
Erreur de compilation :
Remove:5: error: type application is not allowed for postfix operators
    if(l.head!=[v]){
             ^